bug fix for spring security, disable csrf to enable post

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,5 +10,7 @@ spring.freemarker.template-loader-path=classpath:/templates/
 spring.freemarker.suffix=.ftl
 
 personal.settings.time=Europe/Berlin
-spring.security.user.name=foo
-spring.security.user.password=foo
+spring.security.user.password=user
+spring.security.admin.password=admin
+
+feed.default = true
